<resources>
    <string name="app_name">Secret Hitler</string>

    <!--  General  -->
    <string name="release_button">RELEASE BUTTON</string>
    <string name="exit_game">Do you really want to quit current game session?</string>
    <string name="confirm_return">Do you really want to return?</string>
    <string name="ru_sure">Are you sure?</string>

    <string name="ja">ja!</string>
    <string name="nein">nein</string>
    <string name="y_e_s">( Y E S )</string>
    <string name="n_o">( N O )</string>

    <string name="fascist">FASCIST</string>
    <string name="liberal">LIBERAL</string>

    <string name="back_dialog_title">🤜 No nO No 🤛</string>
    <string name="back_no_way">🤖 There is no way back! 🤖\n🕵️ Complete your task ‍👀</string>
    <string name="ok">OK</string>

    <string name="go_to_players">GO TO PLAYERS</string>


    <!-- Main screen -->
    <string name="start">START</string>
    <string name="settings">SETTINGS</string>
    <string name="rules">RULES</string>
    <string name="about">ABOUT</string>


    <!--  Add players  -->
    <string name="players_screen_title">PLAYERS</string>
    <string name="add_player">Add player</string>
    <string name="add_player_dialog_title">Player\'s name:</string>
    <string name="add_player_dialog_hint">Type here …</string>

    <string name="add_more_players">Add at least\n%d more players</string>
    <string name="add_more_player">Add at least\n%d more player</string>

    <plurals name="add_more_players">
        <item quantity="one">@string/add_more_player</item>
        <item quantity="other">@string/add_more_players</item>
    </plurals>

    <string name="add_player_start_assignment">START (%d/10)</string>


    <!-- Role distribution screen -->
    <string name="player">PLAYER</string>
    <string name="envelope_front">Envelope front</string>
    <string name="player_s">PLAYER\'S</string>
    <string name="only">ONLY</string>
    <string name="envelope_back">Envelope back</string>
    <string name="fascist_role_image">Fascist role image</string>
    <string name="envelope_fake_back">Envelope fake back</string>
    <string name="release_to_show_card">Card will be shown automatically after you release the button</string>
    <string name="hitler">Hitler:</string>
    <string name="question_mark_placeholder">\? ? ?</string>
    <string name="other_fascists">Other fascists:</string>
    <string name="skull_image">Skull image</string>
    <string name="hold_to_reveal">HOLD TO REVEAL</string>


    <!--  Navigation  -->
    <string name="navigation_game">GAME</string>
    <string name="navigation_enact_policy">ENACT POLICY</string>
    <string name="navigation_players">PLAYERS</string>


    <!--  ROLES  -->
    <string name="chancellor">CHANCELLOR</string>
    <string name="president">PRESIDENT</string>


    <!--  Policy fragment  -->
    <string name="pass_device_to">Pass device to</string>
    <string name="dont_speak">Don\'t speak now</string>
    <string name="discard_pile_drag_here">DRAG HERE</string>
    <string name="discard_pile_release">RELEASE</string>
    <string name="discard_pile_confirm">↓ CONFIRM ↓</string>
    <string name="elect_new_government_1">ELECT NEW GOVERNMENT</string>
    <string name="elect_new_government_2">to enact next policy</string>
    <string name="select_card_to_discard">SELECT CARD TO DISCARD</string>
    <string name="hold_to_confirm">HOLD TO CONFIRM</string>
    <string name="no_choice">N O  C H O I C E</string>
    <string name="veto_this_agenda">VETO THIS AGENDA</string>
    <string name="big_no">NO!</string>


    <!--  VETO confirm  -->
    <string name="veto_text1">Dear president %s, chancellor %s wishes to veto the agenda.</string>

    <string name="mr">Mr.</string>
    <string name="mrs">Mrs.</string>

    <string name="veto_confirm_1">Dear %s President,</string>
    <string name="veto_confirm_2">As a chancellor, I suggest vetoing the last proposed agenda, thereby enacting neither policy.</string>
    <string name="veto_confirm_3">Veto can be used only when we BOTH agree with it.</string>
    <string name="veto_confirm_4">By utilizing this power, we would be treated as INACTIVE GOVERNMENT and must face respective consequences (advance of election tracker by one tile).</string>
    <string name="veto_confirm_5">DO YOU AGREE WITH VETO?</string>
    <string name="veto_choose_wisely">CHOOSE WISELY</string>
    <string name="veto_agree">I AGREE</string>
    <string name="veto_disagree">I DISAGREE</string>
    <string name="use_veto_q">USE VETO?</string>


    <!--  PLAYERS  -->
    <string name="cancel_election">Do you want to cancel election?</string>
    <string name="nominate_chancellor">NOMINATE CHANCELLOR</string>
    <string name="nominate_president">NOMINATE NEXT PRESIDENT</string>
    <string name="notYet">NOT YET</string>
    <string name="noInteractiveTable">This table is purely informative.\n\nPress big button to continue, don\'t be afraid. ;)</string>


    <!--  ELECTION  -->
    <string name="pick_cancellor_candidate">as a president, you should PICK A CHANCELLOR CANDIDATE from eligible players in the list below.</string>
    <string name="pick_candidate_hint">Feel free to discuss your nomination.</string>

    <string name="pick_president_candidate">pick next PRESIDENT CANDIDATE</string>

    <string name="nominate">NOMINATE</string>
    <string name="select_player">SELECT PLAYER</string>
    <string name="election">ELECTION</string>
    <string name="select_card">SELECT CARD</string>
    <string name="should_vote">should vote.</string>
    <string name="do_you_vote">Do you vote for</string>
    <string name="show_to_all">Show to all players</string>

    <string name="results">RESULTS</string>
    <string name="failure">FAILURE</string>
    <string name="success">SUCCESS</string>

    <string name="already_registered_results">Back to game? Results are already registered.</string>

    <string name="fast_election">FAST ELECTION</string>
    <string name="fast_election_description">
        Each player still actively participating in the game extends their right hand into the middle of a group, making a fist.
        Current president then counts down "3…2…1…0!", at "0!" all players simultaneously use thumbs-up or thumbs-down gesture to show their stance (YES or NO).
    </string>
    <string name="tie_description">A TIE IS CONSIDERED A FAILURE</string>
    <string name="did_succseed">WAS THE ELECTION SUCCESSFUL?</string>
    <string name="set_result">SET RESULT</string>


    <!--  SETTINGS  -->
    <string name="settings_fast_vote">Fast voting 👍👎</string>
    <string name="settings_fast_vote_description">
        Instead of classical voting players put hands in the center and show 👍(YES) or 👎(NO) simultaneously.
    </string>
    <string name="vibrations">Vibrations</string>
    <string name="not_h_confirmed">Not Hitler (confirmed) 👈</string>
    <string name="not_h_confirmed_description">Mark players based on their chancellorship during time with 3 and more fascist policies. </string>
    <string name="show_pile_sizes">Show pile sizes</string>
    <string name="show_pile_sizes_description">Show number of remaining cards in draw and discard pile.</string>


    <!--  PEEK POLICY  -->
    <string name="peek_policy_title">PEEK POLICY</string>
    <string name="peek_policy_description">Secretly look at the top three tiles in the Policy deck.</string>


    <!--  INVESTIGATION  -->
    <string name="investigation">INVESTIGATION</string>
    <string name="investigate">INVESTIGATE</string>
    <string name="investigate_pick_player">PUBLICLY pick player to investigate:</string>
    <string name="investigate_reveal_player">PRIVATELY investigate\nParty Membership of</string>
    <string name="investigation_restriction">NOTE: No player may be investigated twice in the same game.</string>
    <string name="party_membership_of">PARTY MEMBERSHIP OF</string>


    <!--  EXECUTION  -->
    <string name="execution">EXECUTION</string>
    <string name="execute_player">EXECUTE PLAYER</string>
    <string name="i_formally_execute">I formally execute %s</string>
    <string name="execution_note">NOTE: If you kill Hitler liberals win.</string>


    <!--  GAME BOARD  -->
    <string name="game_board">GAME BOARD</string>

    <string name="peek_policy_event">THE PRESIDENT EXAMINES THE TOP THREE CARDS.</string>
    <string name="investigate_event">THE PRESIDENT INVESTIGATES A PLAYER\'S IDENTITY CARD.</string>
    <string name="special_election_event">THE PRESIDENT PICKS THE NEXT PRESIDENTIAL CANDIDATE.</string>
    <string name="execution_event">THE PRESIDENT MUST KILL A PLAYER.</string>
    <string name="execution_veto_event">THE PRESIDENT MUST KILL A PLAYER.\nVETO POWER IS UNLOCKED.</string>
    <string name="special_election">SPECIAL ELECTION</string>

    <string name="players_5_6">PLAYERS: 1 FASCIST AND HITLER,\nHITLER KNOWS WHO IS THE FASCIST.</string>
    <string name="players_7_8">PLAYERS: 2 FASCISTS AND HITLER,\nHITLER DOESN\'T KNOW WHO THE FASCISTS ARE.</string>
    <string name="players_9_10">PLAYERS: 3 FASCISTS AND HITLER,\nHITLER DOESN\'T KNOW WHO THE FASCISTS ARE.</string>

    <string name="election_tracker">ELECTION\nTRACKER</string>
    <string name="reveal_and_pass">REVEAL &amp; PASS\nTOP POLICY</string>

    <string name="draw_pile_info">DRAW PILE: %s</string>
    <string name="discard_pile_info">DISCARD PILE: %s</string>

    <string name="liberals_win">LIBERALS WIN!</string>
    <string name="fascists_win">FASCISTS WIN!</string>

    <string name="game_results">GAME RESULTS</string>
    <string name="fascists">FASCISTS</string>
    <string name="liberals">LIBERALS</string>

    <string name="hold_to_finish">HOLD TO FINISH GAME</string>

    <string name="license_blah">This game is attributed as per the <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International license.</a></string>
    <string name="about_app">This app is FREE and will always be. Feel free to check out <a href="https://github.com/michalgeci/SecretHitler">source code on GitHub</a>.</string>
    <string name="about_developer">If you like this app you can also check my other projects on my page:\n<a href="https://michalgeci.github.io/">https://michalgeci.github.io/</a></string>

</resources>
