<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/confirm_dialog_background"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/confirmDialog_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/futura_medium_bt"
        android:text="@string/confirm_return"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/confirm_dialog_detail_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/rokkitt_bold"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmDialog_title_text" />

    <FrameLayout
        android:id="@+id/confirm_dialog_guide_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/confirm_dialog_detail_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/confirm_dialog_detail_text"
        app:layout_constraintVertical_bias="0.77" />

    <LinearLayout
        android:id="@+id/confirm_dialog_buttons_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_dialog_guide_view">

        <sk.ferinaf.secrethitler.widgets.CardButton
            android:id="@+id/dialog_button_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="12dp"
            app:CardButton_primaryText="@string/nein"
            app:CardButton_secondaryText="@string/n_o"
            app:CardButton_type="CardButtonBlack"
            tools:ignore="RtlHardcoded" />

        <sk.ferinaf.secrethitler.widgets.CardButton
            android:id="@+id/dialog_button_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="4dp"
            app:CardButton_primaryText="@string/ja"
            app:CardButton_secondaryText="@string/y_e_s"
            app:CardButton_type="CardButtonWhite"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>